k8s/search-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emk-search-service
  namespace: backend
spec:
  selector:
    app: emk-search-service
  ports:
    - port: 80
      targetPort: 8000
